--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista de Usuários</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>teste</h1>
+    <div class="container">
+        <h1 class="my-4">Lista de Usuários</h1>
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Email</th>
+                <th scope="col">Papel</th>
+                <th scope="col">Data de Cadastro</th>
+                <th scope="col">Ações</th>
+             </tr>
+        </thead>
+        <tbody>
+            <% users.forEach(user => { %> 
+                <tr>
+                    <th scope="row"><%= user.id %></th>
+                    <td><%= user.nome %></td>
+                    <td><%= user.email %></td>
+                    <td><%= user.papel %></td>
+                    <td><%= new Date(user.created_at).toLocaleDateString('pt-BR') %></td>
+                    <td><a href="">Editar</a></td>
+                    <td><a href="">Excluir</a></td>
+                </tr>
+            <% }); %>
+        </tbody>
+    </table>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
