--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -18,7 +18,7 @@
                 <th scope="col">Papel</th>
                 <th scope="col">Data de Cadastro</th>
                 <th scope="col">Ações</th>
-             </tr>
+            </tr>
         </thead>
         <tbody>
             <% users.forEach(user => { %> 
@@ -34,7 +34,7 @@
             <% }); %>
         </tbody>
     </table>
-
+    <a href="/users/add" class="btn btn-primary">Adicionar</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
