--- a/src/views/users/add.ejs
+++ b/src/views/users/add.ejs
@@ -7,42 +7,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1 class="my-4 text-center">Cadastro de Usuário</h1>
-        <div class="row justify-content-center">
-            <div class="col-8 mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Digite o nome">
-            </div>
-            <div class="col-8 mb-3">
-                <label for="exampleFormControlInput2" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="Digite o email">
-            </div>
-            <div class="col-8 mb-3">
-                <label for="inputPassword" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="inputPassword" aria-describedby="passwordHelpBlock" placeholder="Senha">
-            </div>
-            <div class="col-8 mb-3">
-                <label for="inputPassword" class="form-label">Confirmação de Senha</label>
-                <input type="password" class="form-control" id="inputPassword" aria-describedby="passwordHelpBlock" placeholder="Confirme a Senha">
-            </div>
-            <div class="col-8 mb-3">
-                <label for="selectPapel" class="form-label">Papel</label>
-                <select class="form-select" id="selectPapel" aria-label="Papel">
-                    <option selected>Usuário</option>
-                    <option value="1">Administrador</option>
-                    <option value="2">Moderador</option>
-                </select>
-            </div>
-            <div class="col-8 mb-3 form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">Ativo</label>
-            </div>
-            <div class="col-8 mb-3">
-                <button type="button" class="btn btn-primary col-12 mb-3">Cadastrar</button>
+    <form action="/users" method="POST">
+        <div class="container">
+            <h1 class="my-4 text-center">Cadastro de Usuário</h1>
+            <div class="row justify-content-center">
+                <div class="col-8 mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nome</label>
+                    <input type="text" class="form-control" name="nome" id="exampleFormControlInput1" placeholder="Digite o nome" required>
+                </div>
+                <div class="col-8 mb-3">
+                    <label for="exampleFormControlInput2" class="form-label">Email</label>
+                    <input type="email" class="form-control" name="email" id="exampleFormControlInput2" placeholder="Digite o email" required>
+                </div>
+                <div class="col-8 mb-3">
+                    <label for="inputPassword" class="form-label">Senha</label>
+                    <input type="password" class="form-control" name="senha" id="inputPassword" placeholder="Senha" required>
+                </div>
+                <div class="col-8 mb-3">
+                    <label for="confirmPassword" class="form-label">Confirmação de Senha</label>
+                    <input type="password" class="form-control" name="confirmSenha" id="confirmPassword" placeholder="Confirme a Senha" required>
+                </div>
+                <div class="col-8 mb-3">
+                    <label for="selectPapel" class="form-label">Papel</label>
+                    <select class="form-select" name="papel" id="selectPapel" required>
+                        <option selected value="Usuário">Usuário</option>
+                        <option value="Administrador">Administrador</option>
+                        <option value="Moderador">Moderador</option>
+                    </select>
+                </div>
+                <div class="col-8 mb-3 form-check">
+                    <input class="form-check-input" type="checkbox" name="ativo" id="flexCheckDefault" value="1" checked>
+                    <label class="form-check-label" for="flexCheckDefault">Ativo</label>
+                </div>
+                <div class="col-8 mb-3">
+                    <button type="submit" class="btn btn-primary col-12 mb-3">Cadastrar</button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
