--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -11,30 +11,55 @@
         <h1 class="my-4">Lista de Usuários</h1>
         <table class="table">
             <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nome</th>
-                <th scope="col">Email</th>
-                <th scope="col">Papel</th>
-                <th scope="col">Data de Cadastro</th>
-                <th scope="col">Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% users.forEach(user => { %> 
                 <tr>
-                    <th scope="row"><%= user.id %></th>
-                    <td><%= user.nome %></td>
-                    <td><%= user.email %></td>
-                    <td><%= user.papel %></td>
-                    <td><%= new Date(user.created_at).toLocaleDateString('pt-BR') %></td>
-                    <td><a href="">Editar</a></td>
-                    <td><a href="">Excluir</a></td>
+                    <th scope="col">#</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Papel</th>
+                    <th scope="col">Data de Cadastro</th>
+                    <th scope="col">Ações</th>
                 </tr>
-            <% }); %>
-        </tbody>
-    </table>
-    <a href="/users/add" class="btn btn-primary">Adicionar</a>
+            </thead>
+            <tbody>
+                <% users.forEach(user => { %> 
+                    <tr>
+                        <th scope="row"><%= user.id %></th>
+                        <td><%= user.nome %></td>
+                        <td><%= user.email %></td>
+                        <td><%= user.papel %></td>
+                        <td><%= new Date(user.created_at).toLocaleDateString('pt-BR') %></td>
+                        <td>
+                            <a href="#">Editar</a>
+                            <button class="btn btn-danger btn-sm" onclick="deleteUser('<%= user.id %>')">Excluir</button>
+                        </td>
+                    </tr>
+                <% }); %>
+            </tbody>
+        </table>
+        <a href="/users/add" class="btn btn-primary">Adicionar</a>
+    </div>
+
+    <script>
+async function deleteUser(userId) {
+    if (confirm("Tem certeza que deseja excluir este usuário?")) {
+        try {
+            const response = await fetch(`/users/${userId}/delete`, {
+                method: 'DELETE'
+            });
+            if (response.ok) {
+                alert("Usuário deletado com sucesso.");
+                window.location.reload(); // Recarregar a página
+            } else {
+                alert("Erro ao deletar usuário.");
+            }
+        } catch (error) {
+            console.error('Erro ao deletar usuário:', error);
+            alert("Erro ao deletar usuário.");
+        }
+    }
+}
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
