--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -29,8 +29,8 @@
                         <td><%= user.papel %></td>
                         <td><%= new Date(user.created_at).toLocaleDateString('pt-BR') %></td>
                         <td>
-                            <a href="#">Editar</a>
-                            <button class="btn btn-danger btn-sm" onclick="deleteUser('<%= user.id %>')">Excluir</button>
+                            <a href="/users/<%= user.id %>/edit" class="btn btn-link btn-sm">Editar</a>
+                            <button class="btn btn-link btn-sm" onclick="deleteUser('<%= user.id %>')">Excluir</button>
                         </td>
                     </tr>
                 <% }); %>
