--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -23,13 +23,17 @@
                 <label for="senha" class="form-label">Senha</label>
                 <input type="password" class="form-control" id="senha" name="senha" value="<%= user.senha %>" required>
             </div>
-            <div class="mb-3">
-                <label for="papel" class="form-label">Papel</label>
-                <input type="text" class="form-control" id="papel" name="papel" value="<%= user.papel %>" required>
+            <div class="col-8 mb-3">
+                <label for="selectPapel" class="form-label">Papel</label>
+                <select class="form-select" name="papel" id="selectPapel" required>
+                    <option selected value="Usuário">Usuário</option>
+                    <option value="Administrador">Administrador</option>
+                    <option value="Moderador">Moderador</option>
+                </select>
             </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="ativo" name="ativo" <%= user.ativo ? 'checked' : '' %>>
-                <label class="form-check-label" for="ativo">Ativo</label>
+            <div class="col-8 mb-3 form-check">
+                <input class="form-check-input" type="checkbox" name="ativo" id="flexCheckDefault" value="1" checked>
+                <label class="form-check-label" for="flexCheckDefault">Ativo</label>
             </div>
             <button type="submit" class="btn btn-primary">Salvar</button>
             <a href="/users" class="btn btn-secondary">Cancelar</a>
