--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -36,8 +36,9 @@
                 <label for="inputPassword" class="form-label">Senha</label>
                 <input type="password" class="form-control" name="senha" id="inputPassword" placeholder="Senha" required>
             </div>
-            <div class="text-center">
+            <div class="mb-1 d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary">Login</button>
+                <button type="button" class="btn btn-link">Esqueci a senha</button>
             </div>
         </form>
     </div>
