ajuste rota de login

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-3 mb-4">
                 <div class="card">
-                    <img src="/img/image1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/image1.jpg" class="card-img-top" alt="image1">
                     <div class="card-body">
                         <h5 class="card-title">Título do Post 1</h5>
                         <p class="card-text">Uma breve descrição sobre o conteúdo do post. Este post fala sobre.</p>
@@ -22,7 +22,7 @@
             </div>
             <div class="col-md-3 mb-4">
                 <div class="card">
-                    <img src="/img/image2.jpg" class="card-img-top" alt="...">
+                    <img src="/img/image2.jpg" class="card-img-top" alt="image2">
                     <div class="card-body">
                         <h5 class="card-title">Título do Post 2</h5>
                         <p class="card-text">Uma breve descrição sobre o conteúdo do post. Este post fala sobre.</p>
@@ -32,7 +32,7 @@
             </div>
             <div class="col-md-3 mb-4">
                 <div class="card">
-                    <img src="/img/image1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/image1.jpg" class="card-img-top" alt="image1">
                     <div class="card-body">
                         <h5 class="card-title">Título do Post 3</h5>
                         <p class="card-text">Uma breve descrição sobre o conteúdo do post. Este post fala sobre.</p>
@@ -42,7 +42,7 @@
             </div>
             <div class="col-md-3 mb-4">
                 <div class="card">
-                    <img src="/img/image2.jpg" class="card-img-top" alt="...">
+                    <img src="/img/image2.jpg" class="card-img-top" alt="image2">
                     <div class="card-body">
                         <h5 class="card-title">Título do Post 4</h5>
                         <p class="card-text">Uma breve descrição sobre o conteúdo do post. Este post fala sobre.</p>
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-3 mb-4">
                 <div class="card">
-                    <img src="/img/image1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/image1.jpg" class="card-img-top" alt="image1">
                     <div class="card-body">
                         <h5 class="card-title">Título do Post 5</h5>
                         <p class="card-text">Uma breve descrição sobre o conteúdo do post. Este post fala sobre.</p>
