--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Usuário</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMu7KN8vFfN8bcJr8s0IvhHh4uI7MLB5B5MNYQQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <div class="container">
@@ -20,10 +21,15 @@
                 <input type="email" class="form-control" id="email" name="email" value="<%= user.email %>" required>
             </div>
             <div class="mb-3">
-                <label for="senha" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="senha" name="senha" value="<%= user.senha %>" required>
+                <label for="inputPassword" class="form-label">Senha</label>
+                <div class="input-group">
+                    <input type="password" class="form-control" name="senha" id="inputPassword" placeholder="Senha" required>
+                    <span class="input-group-text">
+                        <i class="far fa-eye" id="togglePassword" style="cursor: pointer;"></i>
+                    </span>
+                </div>
             </div>
-            <div class="col-8 mb-3">
+            <div class="mb-3">
                 <label for="selectPapel" class="form-label">Papel</label>
                 <select class="form-select" name="papel" id="selectPapel" required>
                     <option selected value="Usuário">Usuário</option>
@@ -37,9 +43,25 @@
             </div>
             <button type="submit" class="btn btn-primary">Salvar</button>
             <a href="/users" class="btn btn-secondary">Cancelar</a>
-            <i class="fas fa-user"></i>
         </form>
     </div>
+
+    <script>
+        document.getElementById('togglePassword').addEventListener('click', function () {
+            const passwordField = document.getElementById('inputPassword');
+            const icon = this;
+    
+            if (passwordField.type === 'password') {
+                passwordField.type = 'text';
+                icon.classList.remove('fa-eye');
+                icon.classList.add('fa-eye-slash');
+            } else {
+                passwordField.type = 'password';
+                icon.classList.remove('fa-eye-slash');
+                icon.classList.add('fa-eye');
+            }
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
