--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -34,14 +35,40 @@
             </div>
             <div class="mb-3">
                 <label for="inputPassword" class="form-label">Senha</label>
-                <input type="password" class="form-control" name="senha" id="inputPassword" placeholder="Senha" required>
+                <div class="input-group">
+                    <input type="password" class="form-control" name="senha" id="inputPassword" placeholder="Senha" required>
+                    <div class="input-group-append">
+                        <span class="input-group-text">
+                            <i class="far fa-eye" id="togglePassword" style="cursor: pointer;"></i>
+                        </span>
+                    </div>
+                </div>
             </div>
             <div class="mb-1 d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary">Login</button>
-                <button type="button" class="btn btn-link">Esqueci a senha</button>
+                <button type="button" class="btn">Esqueci a senha</button>
             </div>
         </form>
     </div>
+
+    <script>
+        document.getElementById('togglePassword').addEventListener('click', function () {
+            const passwordField = document.getElementById('inputPassword');
+            const icon = this;
+    
+            // Alterna entre 'password' e 'text'
+            if (passwordField.type === 'password') {
+                passwordField.type = 'text';
+                icon.classList.remove('fa-eye');
+                icon.classList.add('fa-eye-slash');
+            } else {
+                passwordField.type = 'password';
+                icon.classList.remove('fa-eye-slash');
+                icon.classList.add('fa-eye');
+            }
+        });
+    </script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
