--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -55,7 +55,7 @@ async function deleteUser(userId) {
             });
             if (response.ok) {
                 alert("Usuário deletado com sucesso.");
-                window.location.reload(); // Recarregar a página
+                window.location.reload();
             } else {
                 alert("Erro ao deletar usuário.");
             }
