--- a/src/views/users/add.ejs
+++ b/src/views/users/add.ejs
@@ -51,7 +51,8 @@
                     <label class="form-check-label" for="flexCheckDefault">Ativo</label>
                 </div>
                 <div class="col-8 mb-3">
-                    <button type="submit" class="btn btn-primary col-12 mb-3">Cadastrar</button>
+                    <button type="submit" class="btn btn-primary">Cadastrar</button>
+                    <a href="/users" class="btn btn-secondary">Cancelar</a>
                 </div>
             </div>
         </div>
