--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="d-flex justify-content-end mt-4 mb-3">
+            <a class="text-right btn btn-primary btn-sm" href="/users">Usuários</a>
+        </div>
         <h1 class="my-4 text-center">Últimos Posts do Blog</h1>
         <div class="row">
             <div class="col-md-3 mb-4">
